# syncsim

./: .gitignore  Dockerfile  LICENSE  LICENSING.md  MIGRATION_HANDOFF.md  MIGRATION_SPIKE_STATUS.md  NS3_MIGRATION_POC_PLAN.md  NS3_MIGRATION_SURVEY.md  NS3_PARITY_PLAN.md  NS3_TCAM_PLAN.md  README.md  run_docker_ide.sh
.github/workflows/: ci.yml
configs/topology/: minimal.yaml  nominal.yaml
docker/: desktop-entrypoint.sh
ns3/: OBSERVABILITY.md  README.md
ns3/clock/: README.md  clock-spike.cc
ns3/congestion/: README.md  congestion-topology.cc  gptp.cc  gptp.h
ns3/feedback/: README.md  clock.cc  feedback-topology.cc  gptp.cc
ns3/gptp/: README.md  WIRE_FORMAT.md  gptp-spike.cc  gptp.h
ns3/nominal/: README.md  gptp.cc  nominal-topology.cc
ns3/scripts/: check_pcap_gptp.py  run.sh  run_sweep.sh
ns3/sim/: CMakeLists.txt  README.md  clock.h  gptp.cc  gptp.h  sim.cc
ns3/sim/scenarios/: congestion.yaml  feedback.yaml  gptp-spike.yaml  nominal.yaml
ns3/smoke/: smoke-topology.cc
ns3/spikes/: P3A_SPIKE_FINDINGS.md  p3a-fullduplex-spike.cc
scripts/: analyze.py  build_site.py  check_pcap_replay.py  gen_mermaid.py  gen_topology.py  plot_results.py  run.sh  run_sweep.sh  simdata.py  summarize_sweep.py  verify_topology_equivalence.py
simulations/: congestion.ini  feedback.ini  minimal.ini  minimal.ned  nominal.ini  nominal.ned  pcap_capture.ini  pcap_replay.ini  sweep.ini
